# SimSysCompiler

./: CMakeLists.txt  Doxyfile  README.md  death.txt  main.cpp  test.txt  turing.acc
Classes/: DepthParsedInput.cpp  DepthParsedInput.h  Generator.cpp  Generator.h  Operand.cpp  Operand.h  OperandHandler.cpp  OperandHandler.h  Stack.h  Token.h  TokenizedInput.cpp  TokenizedInput.h  errors.h
Classes/Lexical/: IContext.h  IToken.cpp  IToken.h  LexicalAnalysis.cpp  LexicalAnalysis.h  Pattern.h
Classes/Parser/: ParseNode.cpp  ParseNode.h  ParseTree.cpp  ParseTree.h
Data/: astRules.cpp  astRules.h  evaluators.cpp  evaluators.h  grammar.cpp  grammar.h  patterns.h
Source/: GeneralDataStore.cpp  GeneralDataStore.h  ScopedSymbolTable.h  Singleton.h  SymbolTable.cpp  SymbolTable.h  TypeId.h  builtinTypes.h  utils.cpp  utils.h
Source/AbstractSyntaxTree/: ASTNode.cpp  ASTNode.h  AbstractSyntaxTree.cpp  AbstractSyntaxTree.h  Rule.cpp  Rule.h  process.cpp  process.h
Source/Assembly/: Assembly.cpp  Assembly.h  Code.cpp  Code.h  DataStructureMovement.cpp  DataStructureMovement.h  Expr.h  Fn.cpp  Fn.h  Stmt.cpp
Source/AssemblyGenerator/: Assembly.cpp  Assembly.h  AssemblyFunction.cpp  AssemblyFunction.h  DataStructureMovement.cpp  DataStructureMovement.h  Location.h  OperatorGenerators.cpp  OperatorGenerators.h  Snippet.h
Source/BuiltInFunctions/: ByteWiseCopy.h  Char.h  Num.h  getFunctions.cpp  (+1 more)
Standalone/: errors.h
tests/: CMakeLists.txt  ExpressionizedInput.cpp  LexicalAnalysis_test.cpp  TokenizedInputTests.cpp  grammar.lex  parsingTest.txt  testmain.cpp
(+366 files in other folders)
